End of section 7

--- a/client/angular.json
+++ b/client/angular.json
@@ -18,6 +18,11 @@
           "skipTests": true,
           "path": "src/core/guards"
         }
+        ,
+        "@schematics/angular:interceptor": {
+          "skipTests": true,
+          "path": "src/core/interceptors"
+        }
       },
       
       "root": "",
@@ -100,5 +105,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
